// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`populate add new custom post types & taxonomies to the state 1`] = `
Array [
  Object {
    "id": 11,
    "link": "/cpt/cpt-11/",
    "type": "cpt",
  },
  Object {
    "id": 12,
    "link": "/cpt/cpt-12/",
    "type": "cpt",
  },
  Object {
    "id": 12,
    "link": "/cpt/cpt-12/",
    "type": "cpt",
  },
]
`;

exports[`populate add new custom post types & taxonomies to the state 2`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "11": Object {
      "author": 1,
      "id": 11,
      "link": "/post-11/attachment-11/",
      "slug": "attachment-11",
      "type": "attachment",
    },
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/post-12/attachment-12/",
      "slug": "attachment-12",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          11,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "custom-taxonomy": Array [
        1,
      ],
      "featured_media": 2,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [],
      "type": "cpt",
    },
    "12": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "custom-taxonomy": Array [
        1,
      ],
      "featured_media": 2,
      "id": 12,
      "link": "/cpt/cpt-12/",
      "slug": "cpt-12",
      "tags": Array [],
      "type": "cpt",
    },
  },
  "custom-taxonomy": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/custom-taxonomy/ct-1/",
      "parent": 0,
      "slug": "ct-1",
      "taxonomy": "custom-taxonomy",
    },
  },
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/",
      "type": "cpt",
    },
    "/cpt/cpt-12/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-12/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-12/",
      "type": "cpt",
    },
    "/custom-taxonomy/ct-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/custom-taxonomy/ct-1/",
      "page": 1,
      "query": Object {},
      "route": "/custom-taxonomy/ct-1/",
      "taxonomy": "custom-taxonomy",
    },
    "/post-11/attachment-11/": Object {
      "id": 11,
      "isFetching": false,
      "isReady": false,
      "link": "/post-11/attachment-11/",
      "page": 1,
      "query": Object {},
      "route": "/post-11/attachment-11/",
      "type": "attachment",
    },
    "/post-12/attachment-12/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "link": "/post-12/attachment-12/",
      "page": 1,
      "query": Object {},
      "route": "/post-12/attachment-12/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`populate adds posts and embedded into state 1`] = `
Array [
  Object {
    "id": 1,
    "link": "/post-1/",
    "type": "post",
  },
  Object {
    "id": 2,
    "link": "/post-2/",
    "type": "post",
  },
  Object {
    "id": 3,
    "link": "/post-3/",
    "type": "post",
  },
]
`;

exports[`populate adds posts and embedded into state 2`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/category/cat-1/",
      "page": 1,
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "link": "/post-2/",
      "page": 1,
      "query": Object {},
      "route": "/post-2/",
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "link": "/post-2/attachment-2/",
      "page": 1,
      "query": Object {},
      "route": "/post-2/attachment-2/",
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "link": "/post-3/",
      "page": 1,
      "query": Object {},
      "route": "/post-3/",
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "link": "/post-3/attachment-3/",
      "page": 1,
      "query": Object {},
      "route": "/post-3/attachment-3/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`populate removes WP API path from links 1`] = `
Array [
  Object {
    "id": 1,
    "link": "/post-1/",
    "type": "post",
  },
  Object {
    "id": 2,
    "link": "/post-2/",
    "type": "post",
  },
  Object {
    "id": 3,
    "link": "/post-3/",
    "type": "post",
  },
]
`;

exports[`populate removes WP API path from links 2`] = `
Object {
  "api": "https://test.frontity.org/subdirectory/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/category/cat-1/",
      "page": 1,
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "link": "/post-2/",
      "page": 1,
      "query": Object {},
      "route": "/post-2/",
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "link": "/post-2/attachment-2/",
      "page": 1,
      "query": Object {},
      "route": "/post-2/attachment-2/",
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "link": "/post-3/",
      "page": 1,
      "query": Object {},
      "route": "/post-3/",
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "link": "/post-3/attachment-3/",
      "page": 1,
      "query": Object {},
      "route": "/post-3/attachment-3/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`populate transforms links if subdirectory is specified 1`] = `
Array [
  Object {
    "id": 1,
    "link": "/blog/post-1/",
    "type": "post",
  },
  Object {
    "id": 2,
    "link": "/blog/post-2/",
    "type": "post",
  },
  Object {
    "id": 3,
    "link": "/blog/post-3/",
    "type": "post",
  },
]
`;

exports[`populate transforms links if subdirectory is specified 2`] = `
Object {
  "api": "https://test.frontity.org/subdirectory/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/blog/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/blog/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/blog/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/blog/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/blog/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/blog/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/blog/author/author-1/",
    },
    "/blog/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/category/cat-1/",
      "page": 1,
      "query": Object {},
      "route": "/blog/category/cat-1/",
      "taxonomy": "category",
    },
    "/blog/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/blog/post-1/",
      "type": "post",
    },
    "/blog/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/blog/post-1/attachment-1/",
      "type": "attachment",
    },
    "/blog/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/post-2/",
      "page": 1,
      "query": Object {},
      "route": "/blog/post-2/",
      "type": "post",
    },
    "/blog/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/post-2/attachment-2/",
      "page": 1,
      "query": Object {},
      "route": "/blog/post-2/attachment-2/",
      "type": "attachment",
    },
    "/blog/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/post-3/",
      "page": 1,
      "query": Object {},
      "route": "/blog/post-3/",
      "type": "post",
    },
    "/blog/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "link": "/blog/post-3/attachment-3/",
      "page": 1,
      "query": Object {},
      "route": "/blog/post-3/attachment-3/",
      "type": "attachment",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/blog/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/blog/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 3,
      "id": 3,
      "link": "/blog/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;
